# code-for-diploma

./: .gitignore  CMakeLists.txt  README.md  code.txt  geometry.cpp  main.cpp
gmsh-lib/lib/: libgmsh.4.10.dylib  libgmsh.dylib
includes/: Geometry.hpp  InitParam.hpp  Mesh.hpp  Model.hpp  Node.hpp  Point.hpp  ThreeNode.hpp  Triangle.hpp
sources/: Geometry.cpp  InitParam.cpp  Mesh.cpp  Model.cpp  Node.cpp  Point.cpp  ThreeNode.cpp  Triangle.cpp
